--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>    <!-- Nos permite establecer la version de html que estamos utilizando -->
 <html  lang="es">             <!-- Se crea etiqueta html en donde ira toda la pagina web, tambien podemos poner atributos (lenguaje español)-->
     <head>                   <!-- Información que NO se mostrará en la pagina web-->
-        <tittle>Mi primera web</tittle>
+        <title>Mi primera web</title>
 
 
     </head>
