--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <!DOCTYPE HTML>    <!-- Nos permite establecer la version de html que estamos utilizando -->
 <html  lang="es">             <!-- Se crea etiqueta html en donde ira toda la pagina web, tambien podemos poner atributos (lenguaje español)-->
     <head>                   <!-- Información que NO se mostrará en la pagina web-->
-        <title>Mi primera web</title>
-
-
+        <title>Mi primera web</title>    <!-- Título que aparecera en la página al cargar-->
     </head>
 
     <body>                <!-- Es la información que SI se mostrará en la página web-->
-
-
+        <h1> Título de mi web </h1>         <!-- Se coloca un ecabezado de nivel 1-->
+        <h2>Bienvenidos a mi web</h2>       <!-- Se coloca un ecabezado de nivel 2-->
 
     </body>
 </html>
