Creación de listas ordenadas y desordenadas

--- a/index.html
+++ b/index.html
@@ -18,5 +18,29 @@
         <h3>Tercer encabezado de la página</h3>
         <p>Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipiscing elit.<br/> Curabitur <em>fringilla vehicula maximu</em>s. Duis eros sapien, fermentum cursus felis ac, eleifend bibendum odio. Pellentesque molestie euismod aliquet. Aliquam finibus ultrices ante. <span id="resualtado" class="rojo amarillo">Vivamus eu urna felis</span>. Quisque molestie dolor justo. In ac consectetur metus, vitae vulputate purus. Maecenas a nulla imperdiet, sagittis felis sed, mattis felis. Quisque dignissim et elit at pharetra. Ut diam metus, vehicula sed sodales non, volutpat vel orci. Donec ut gravida odio. Sed ornare neque nulla, vel varius nibh porttitor quis. Fusce elementum sed nisi non luctus. Fusce accumsan imperdiet turpis, non aliquet lorem. Donec laoreet, dolor accumsan mattis venenatis, est magna bibendum augue, vitae condimentum justo nisi nec tortor. Proin luctus molestie dolor nec porttitor. </p>
         <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur fringilla vehicula maximus. Duis eros sapien, fermentum cursus felis ac, eleifend bibendum odio. Pellentesque molestie euismod aliquet. Aliquam finibus ultrices ante. Vivamus eu urna felis. Quisque molestie dolor justo. In ac consectetur metus, vitae vulputate purus. Maecenas a nulla imperdiet, sagittis felis sed, mattis felis. Quisque dignissim et elit at pharetra. Ut diam metus, vehicula sed sodales non, volutpat vel orci. Donec ut gravida odio. Sed ornare neque nulla, vel varius nibh porttitor quis. Fusce elementum sed nisi non luctus. Fusce accumsan imperdiet turpis, non aliquet lorem. Donec laoreet, dolor accumsan mattis venenatis, est magna bibendum augue, vitae condimentum justo nisi nec tortor. Proin luctus molestie dolor nec porttitor. </blockquote>
+  
+        <hr/>  <!-- Salto de línea con linea dibujada-->
+
+        <h3>Listado de frutas ordenada</h3>
+        <ol>                       <!-- Inicializa la lista-->
+            <li>Manzana</li>        <!-- Creación de objetos en lista de forma ordenada-->
+            <li>Naranja
+                <ol>
+                    <li>Rojo</li>
+                    <li>Verde</li>
+                </ol>
+            </li>
+            <li>Limon</li>
+            <li>Platano</li>
+        </ol>
+  
+        <h3>Listado de nombres desordenada</h3>
+        <ul>                       <!-- Inicializa la lista-->
+            <li>Peter</li>        <!-- Creación de objetos en lista de forma desordenada-->
+            <li>Jhon</li>
+            <li>Lizz</li>
+            <li>Scar</li>
+        </ul>
+  
     </body>
 </html>
