Creación de tablas

--- a/index.html
+++ b/index.html
@@ -47,6 +47,28 @@
             <li>Lizz</li>
             <li>Scar</li>
         </ul>
+
+        <hr/>  <!-- Salto de línea con linea dibujada-->
+
+        <h3>Tablas</h3>
+
+        <table border="1">                       <!-- Declaración de la tabla con bordes-->
+            <tr>                      <!-- Fila uno-->
+                <th>Nombre</th>       <!-- Se definen columnas y se resalta en negritas con th-->
+                <th>Apellido</th>
+                <th>Pais</th>
+            </tr>  
+            <tr>                      <!-- Fila dos-->
+                <td>Victor</td>       <!-- Se escriben los 1ros datos-->
+                <td>Hernandez</td>
+                <td>Colombia</td>
+            </tr>  
+            <tr>                              <!-- Fila uno-->
+                <td>Kevin</td>                <!-- Se escriben los 2dos datos-->
+                <td colspan="2">Perez</td>     <!-- Se expande 2 espacios la columna-->
+            </tr>  
+        </table>
+
   
     </body>
 </html>
