--- a/index.html
+++ b/index.html
@@ -6,27 +6,25 @@
     </head>
 
     <body>                <!-- Es la información que SI se mostrará en la página web-->
-        <h1> Título de mi web </h1>         <!-- Se coloca un ecabezado de nivel 1-->
+
+    <!----------------------------------------------------------------------------------------->
+        <h1> Titulo de mi web </h1>         <!-- Se coloca un ecabezado de nivel 1-->
         <h2>Bienvenidos a mi web</h2>       <!-- Se coloca un ecabezado de nivel 2-->
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/> Curabitur fringilla vehicula maximus. Duis eros sapien, fermentum cursus felis ac, eleifend bibendum odio. Pellentesque molestie euismod aliquet. Aliquam finibus ultrices ante. Vivamus eu urna felis. Quisque molestie dolor justo. In ac consectetur metus, vitae vulputate purus. Maecenas a nulla imperdiet, sagittis felis sed, mattis felis. Quisque dignissim et elit at pharetra. Ut diam metus, vehicula sed sodales non, volutpat vel orci. Donec ut gravida odio. Sed ornare neque nulla, vel varius nibh porttitor quis. Fusce elementum sed nisi non luctus. Fusce accumsan imperdiet turpis, non aliquet lorem. Donec laoreet, dolor accumsan mattis venenatis, est magna bibendum augue, vitae condimentum justo nisi nec tortor. Proin luctus molestie dolor nec porttitor. </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur fringilla vehicula maximus. Duis eros sapien, fermentum cursus felis ac, eleifend bibendum odio. Pellentesque molestie euismod aliquet. Aliquam finibus ultrices ante. Vivamus eu urna felis. Quisque molestie dolor justo. In ac consectetur metus, vitae vulputate purus. Maecenas a nulla imperdiet, sagittis felis sed, mattis felis. Quisque dignissim et elit at pharetra. Ut diam metus, vehicula sed sodales non, volutpat vel orci. Donec ut gravida odio. Sed ornare neque nulla, vel varius nibh porttitor quis. Fusce elementum sed nisi non luctus. Fusce accumsan imperdiet turpis, non aliquet lorem. Donec laoreet, dolor accumsan mattis venenatis, est magna bibendum augue, vitae condimentum justo nisi nec tortor. Proin luctus molestie dolor nec porttitor. </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br/> Curabitur fringilla vehicula maximus. Duis eros sapien, fermentum cursus felis ac, eleifend bibendum odio. Pellentesque molestie euismod aliquet. Aliquam finibus ultrices ante. Vivamus eu urna felis. Quisque molestie dolor justo. In ac consectetur metus, vitae vulputate purus. Maecenas a nulla imperdiet, sagittis felis sed, mattis felis. Quisque dignissim et elit at pharetra. Ut diam metus, vehicula sed sodales non, volutpat vel orci. Donec ut gravida odio. Sed ornare neque nulla, vel varius nibh porttitor quis. Fusce elementum sed nisi non luctus. Fusce accumsan imperdiet turpis, non aliquet lorem. Donec laoreet, dolor accumsan mattis venenatis, est magna bibendum augue, vitae condimentum justo nisi nec tortor. Proin luctus molestie dolor nec porttitor. </p>
-        
         <hr/>   <!-- Salto de línea con linea dibujada-->
-
-        <h2>Imanges en HTML</h2>
+    <!----------------------------------------------------------------------------------------->
+        <h2>Imagenes en HTML</h2>
         <img src = "imagenes\drake.jpg" alt = "Foto de wow" title = "WOW" width="100" height="100"/>
-
         <hr/>  <!-- Salto de línea con linea dibujada-->
-
-
+    <!----------------------------------------------------------------------------------------->
         <h3>Tercer encabezado de la página</h3>
         <p>Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipiscing elit.<br/> Curabitur <em>fringilla vehicula maximu</em>s. Duis eros sapien, fermentum cursus felis ac, eleifend bibendum odio. Pellentesque molestie euismod aliquet. Aliquam finibus ultrices ante. <span id="resualtado" class="rojo amarillo">Vivamus eu urna felis</span>. Quisque molestie dolor justo. In ac consectetur metus, vitae vulputate purus. Maecenas a nulla imperdiet, sagittis felis sed, mattis felis. Quisque dignissim et elit at pharetra. Ut diam metus, vehicula sed sodales non, volutpat vel orci. Donec ut gravida odio. Sed ornare neque nulla, vel varius nibh porttitor quis. Fusce elementum sed nisi non luctus. Fusce accumsan imperdiet turpis, non aliquet lorem. Donec laoreet, dolor accumsan mattis venenatis, est magna bibendum augue, vitae condimentum justo nisi nec tortor. Proin luctus molestie dolor nec porttitor. </p>
         <blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur fringilla vehicula maximus. Duis eros sapien, fermentum cursus felis ac, eleifend bibendum odio. Pellentesque molestie euismod aliquet. Aliquam finibus ultrices ante. Vivamus eu urna felis. Quisque molestie dolor justo. In ac consectetur metus, vitae vulputate purus. Maecenas a nulla imperdiet, sagittis felis sed, mattis felis. Quisque dignissim et elit at pharetra. Ut diam metus, vehicula sed sodales non, volutpat vel orci. Donec ut gravida odio. Sed ornare neque nulla, vel varius nibh porttitor quis. Fusce elementum sed nisi non luctus. Fusce accumsan imperdiet turpis, non aliquet lorem. Donec laoreet, dolor accumsan mattis venenatis, est magna bibendum augue, vitae condimentum justo nisi nec tortor. Proin luctus molestie dolor nec porttitor. </blockquote>
-  
         <hr/>  <!-- Salto de línea con linea dibujada-->
-
+    <!----------------------------------------------------------------------------------------->
         <h3>Listado de frutas ordenada</h3>
         <ol>                       <!-- Inicializa la lista-->
             <li>Manzana</li>        <!-- Creación de objetos en lista de forma ordenada-->
@@ -39,7 +37,8 @@
             <li>Limon</li>
             <li>Platano</li>
         </ol>
-  
+        <hr/>  <!-- Salto de línea con linea dibujada-->
+    <!----------------------------------------------------------------------------------------->
         <h3>Listado de nombres desordenada</h3>
         <ul>                       <!-- Inicializa la lista-->
             <li>Peter</li>        <!-- Creación de objetos en lista de forma desordenada-->
@@ -47,11 +46,39 @@
             <li>Lizz</li>
             <li>Scar</li>
         </ul>
-
         <hr/>  <!-- Salto de línea con linea dibujada-->
+    <!----------------------------------------------------------------------------------------->
+        <h3>Formulario</h3>               
+        <form>                         <!-- Se inicializa el formulario-->
+            <p>                    <!-- parrafo tambien sirve para hacer salto de linea-->
+                <label for="Nombre">Nombre: </label>      <!-- Se pone un label para el input, se dice hacia a cual se vincula-->
+                <input type="text" name="Nombre" placeholder="Escribe tu nombre."/>        <!-- Se crea un input de texto para el usuario y se nombra el input para vincularse-->
+            </p>
+            <p>
+                <label for="Descripcion"> Descripcion: </label>               <!-- Label de textarea-->
+                <textarea name="Descripcion"></textarea>                      <!-- Input de textos grandes-->
+            </p>
+            <p>                       <!-- parrafo tambien sirve para hacer salto de linea-->
+                <label for="genero"> Genero: </label>  <br/>  <!-- Label con salto de linea-->
+                <input type="radio" name="genero" value="hombre">Hombre <br/>  <!-- Input de selección con 3 circulos, -->
+                <input type="radio" name="genero" value="mujer">Mujer <br/>   <!--se define el valor y luego al final el texto que se verá-->
+                <input type="radio" name="genero" value="Nada">No especificado <br/>
+            </p>
+            <p>                   <!-- parrafo tambien sirve para hacer salto de linea-->
+                <label for="ofi"> Oficio: </label>  <br/>
+                <select name="ofi">
+                    <option value="Estudiante">Estudiante</option> <br/>
+                    <option value="Becario">Becario</option> <br/>
+                    <option value="Oficio">Oficio</option> <br/>
+                </select>  <br/>
+                <input type="submit" value="Enviar formulario"/>          <!--Boton para enviar formulario-->
+            </p>
 
+
+        </form>
+        <hr/>  <!-- Salto de línea con linea dibujada-->
+    <!----------------------------------------------------------------------------------------->
         <h3>Tablas</h3>
-
         <table border="1">                       <!-- Declaración de la tabla con bordes-->
             <tr>                      <!-- Fila uno-->
                 <th>Nombre</th>       <!-- Se definen columnas y se resalta en negritas con th-->
@@ -68,7 +95,7 @@
                 <td colspan="2">Perez</td>     <!-- Se expande 2 espacios la columna-->
             </tr>  
         </table>
-
+    <!----------------------------------------------------------------------------------------->        
   
     </body>
 </html>
